--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^13.1.0",
     "mongoose": "^6.0.8",
+    "node-cache": "^5.1.2",
     "yaml": "^1.10.2"
   }
 }
