Simulation and in-fight checking!

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^13.1.0",
     "mongoose": "^6.0.8",
     "node-cache": "^5.1.2",
+    "rfc6902": "^5.0.0",
     "yaml": "^1.10.2"
   }
 }
