Major rewrite of the item system

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dreamyrpg",
-  "version": "1.0.0pre",
+  "version": "1.1.0",
   "description": "",
   "main": "out/index.js",
   "scripts": {
